<resources>
    <string name="app_name">Online Appointment</string>
    <string name="text_logo"> Logo institutional</string>
    <string name="title_cite">Schedule Appointment</string>
    <string name="text_back"> Back</string>
    <string name="text_login">Log In</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_personalemail">Personal Email</string>
    <string name="text_mypassword"> Mi Password</string>
    <string name="title_resgister">Register</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_fullpasword">Confirm Password</string>
    <string name="text_formule">Complete the form</string>
    <string name="text_createaccount"> Create new account</string>
    <string name="text_countexisten"> Do you already have an account?</string>
    <string name="text_image">Image</string>
    <string name="text_username">User</string>
    <string name="text_myusername">Enter your username</string>
    <string name="text_phone">Phone:</string>
    <string name="text_address"> Address:</string>
    <string name="text_name">Name:</string>
    <string name="text_identification">Identification card:</string>
    <string name="text_logout">Log Out</string>
    <string name="text_update_profile">Update profile</string>
    <string name="text_rol">Post</string>
    <string name="btn_add"> Add</string>
    <string name="title_profile"> Profile</string>
    <string name="text_forgot_password">Forgot your Password?</string>
    <string name="text_empezar">Get started</string>
    <string name="text_bienvenida">«Estás en buenas manos. Nuestros especialistas están aquí para escucharte, guiarte y capacitarte mientras te familiarizas con nuestros productos y servicios.»
</string>

    //Pacientes
    <string name="home_op1">Appointment</string>
    <string name="home_op2">Schedule</string>
    <string name="home_op3">Services</string>
    <string name="home_op4">Doctors</string>
    <string name="home_op5">Location</string>
    <string name="home_op6">Reports</string>
    <string name="home_op7">Assistance</string>


    //Medicos
    <string name="home_op1m">Assistance</string>


    <string name="screen1">Upload a Video</string>
    <string name="screen2">Create a Short</string>
    <string name="screen3">Go Live</string>
    <string name="screen1desc">Record a new video or select a video you already have on your phone.
        Watch YouTube Videos for Free</string>
    <string name="screen2desc">Create, edit, and upload your own short videos.
        All you need is an idea and a phone to record and share Shorts. </string>
    <string name="screen3desc">YouTube live streaming allows you to reach your community in real time.
    Go live on YouTube from webcam, mobile and encoder streaming.</string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="description1"><b><center>MISSION</center></b>
    \n\n<b> Provide excellent medical care, with warmth, through a health team committed to training and technological innovation, meeting the highest quality and safety standards and achieving maximum patient satisfaction.</b>
    </string>
    <string name="description2"><b><center>VISIÓN</center></b>
         \n\n<b>Be a reference in the province of El Oro and area of influence for quality care, safety and patient satisfaction.</b>
    </string>

    <string-array name="rol">
        <item>Choose</item>
        <item>Administrator</item>
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
    <string-array name="rol1">
        <item>Rol</item>
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>

    <string-array name="tipo_marcacion">
        <item>Choose</item>
        <item>Start of the day</item>
        <item>End of the day</item>
    </string-array>

    <string-array name="tipo_cita">
        <item>Select</item>
        <item>Obesity</item>
        <item>Diabetes Mellitus type 1 and 2</item>
        <item>Thyroid diseases</item>
        <item>Cholesterol and triglyceride alterations</item>
        <item>Disorders of sexual differentiation</item>
        <item>Menopause</item>
        <item>Osteoporosis</item>
        <item>Menstrual disorders</item>
        <item>Infertility</item>
        <item>Short stature</item>
        <item>Pituitary tumors</item>
        <item>Polycystic Ovarian Syndrome</item>
        <item>Other</item>
    </string-array>

    <string-array name="estado_actividad">
        <item>Select</item>
        <item>Pending</item>
        <item>Under Review</item>
        <item>Completed</item>
    </string-array>
    <string-array name="tipo">
        <item>Select</item>
        <item>In person</item>
        <item>Online</item>
    </string-array>


    <string name="texto_subrayado"><u>Our networks</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_horario">Schedule</string>
    <string name="text_contact">Contact us</string>
    <string name="text_description">About us</string>
    <string name="title_fb">Facebook</string>
    <string name="title_ws">Whatsapp</string>
    <string name="title_ig">Instagram</string>


    <string-array name="tipo_tratamiento">
        <item>Select</item>
        <item>Available</item>
        <item>Not available</item>
    </string-array>
    <string-array name="tipo_solicitud">
        <item>Select</item>
        <item>Medical Certificate</item>
        <item>Clinical history</item>
    </string-array>

    <string-array name="estado_user">
        <item>Selecciona</item>
        <item>Available</item>
        <item>Not available</item>
    </string-array>

    <string-array name="estado">
        <item>Select</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>


</resources>