<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icono_name"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_username" />
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Horario" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_contact" />
        <item
            android:id="@+id/nav_Description"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_description" />

    </group>
</menu>