<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.joelmaza.mediclic.Fragments.Fragment_Home"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.joelmaza.mediclic.Fragments.fragmento_Usuario"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.joelmaza.mediclic.Fragments.Fragment_perfil"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_horario"
        android:name="com.joelmaza.mediclic.Fragments.Fragment_Horario"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_horario" />
</navigation>