<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="80dp">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/logo_empresa"

                />

                <EditText
                    android:id="@+id/editText_email"
                    android:background="@drawable/custom_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/text_personalemail"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />




                <EditText
                    android:id="@+id/editText_password"
                    android:background="@drawable/custom_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:hint="@string/text_mypassword"
                    android:textSize="18sp" />




            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/proyecto_dark"
                android:text="@string/text_login"
                android:textSize="16sp"
                app:cornerRadius = "20dp"
                android:textStyle="bold"
                />
        <TextView
            android:id="@+id/text_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:gravity="center"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_edittext2"
        android:layout_marginTop="550dp"
        android:textColor="@color/proyecto_dark"
        android:gravity="center"
        android:text="@string/text_createaccount"
        android:textStyle="bold"
        android:textSize="16sp" />











</RelativeLayout>
