<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/baseline_circle_left"
        app:title="@string/text_createaccount"
        app:titleTextColor="#FFFFFF"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/text_formule"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextcedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="Cedula"
                    android:drawableStart="@drawable/icono_name"
                    android:inputType="number"
                    android:textColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editText_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:padding="20dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_fullname"
                    android:drawableStart="@drawable/icono_name"
                    android:inputType="textPersonName|textCapCharacters"
                    android:textColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/text_personalemail"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icono_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                >

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/text_mypassword"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/baseline_lock"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                >

                <EditText
                    android:id="@+id/editText_confpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/text_fullpasword"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/baseline_lock"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_registrarse"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/title_resgister"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/success"/>

                <TextView
                    android:id="@+id/TengounacuentaTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/text_countexisten"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </com.google.android.material.textfield.TextInputLayout>





        </LinearLayout>


</RelativeLayout>